dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationAttachment__c.object
<CustomObject>
    <fields>
        <fullName>AttAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is true, if attachment has been added to Integration Comment</description>
        <inlineHelpText>Flag is true, if attachment has been added to Integration Comment</inlineHelpText>
        <label>AttAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <description>Id of related attachment</description>
        <inlineHelpText>Id of related attachment</inlineHelpText>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Integration__c</fullName>
        <description>Relation to Case Comment Integration</description>
        <inlineHelpText>Relation to Case Comment Integration</inlineHelpText>
        <label>Case Comment Integration</label>
        <referenceTo>IntegrationComments__c</referenceTo>
        <relationshipLabel>IntegrationAttachments</relationshipLabel>
        <relationshipName>IntegrationAttachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Error from Integration with OCTT</description>
        <inlineHelpText>Error from Integration with OCTT</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmMesId__c</fullName>
        <description>Id of related Email Message</description>
        <inlineHelpText>Id of related Email Message</inlineHelpText>
        <label>EmMesId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>IntegrationAttachment</label>
    <nameField>
        <label>IntegrationAttachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationAttachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>